#7650 fix foldout label font truncated

--- a/js/notebook/src/shared/style/beakerx.scss
+++ b/js/notebook/src/shared/style/beakerx.scss
@@ -131,7 +131,7 @@
       padding: 0;
       height: auto;
       display: block;
-      line-height: 1;
+      line-height: 1.2em;
       flex-shrink: 0;
     }
   }
